1) Added attrs file 2) Worked on styles file 3) Addded first color 4) Will add colors through the colors-styles-attrs approach

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,14 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+
+    <style name="NHIEBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+        <item name="Brand1_100">@color/pink_100</item>
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
 
 </resources>
